@@ -1,3 +1,9 @@
+2010-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/addons.c:
+   Use the new PLUGIN_SET_TRANSLATABLE_INFO() macro.
+
+
 2010-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * src/ao_xmltagging.[c|h]:
